Updated width unit of measure on main element. Fixing issue on mobile device in landscape mode.

--- a/index.css
+++ b/index.css
@@ -71,7 +71,7 @@ h6 {
 
 main {
   display: flex;
-  min-width: 100vw;
+  min-width: 100%;
   min-height: 100vh;
   justify-content: center;
   align-items: center;
